--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="icon">
                 <img src="./images/icons8-whatsapp-48.png" alt="">
             </div>
-            <a id="no" class="text-white navbar-brand" href="#">Whatsapp</a>
+            <a id="whatsApp-icon" class="text-white navbar-brand" href="#">Whatsapp</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,6 +59,7 @@
         </nav>
     </header>
     <section>
+        <!-- smartphone size display -->
         <div class="small-display">
             <div class="row">
 
@@ -77,6 +78,7 @@
                 </div>
             <br>
             <img id="playstore" src="./images/google-playstore.png" alt="">
+        <!-------------PC display---------------->
             <div class="container">
                 <div class="row">
 
@@ -105,6 +107,8 @@
             </div>
         </div>
     </section>
+
+    <!---------middle section--------->
     <section class="middle">
 
         <div class="row">
@@ -138,6 +142,8 @@
             <button>EXPLORE FEATURES</button>
         </div>
     </section>
+
+    <!----------footer section---------->
     <footer>
         <div class="container-fluid">
 
@@ -184,6 +190,19 @@
                         <li>Facebook</li>
                         <li>Coronavirus</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+        <div class="second-footer">
+
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-6">
+                        <h6>2022 © WhatsApp LLC</h6>
+                    </div>
+                    <div class="col-md-6">
+                        <h6>Privacy & Terms</h6>
+                    </div>
                 </div>
             </div>
         </div>
